--- a/SouP/build.gradle
+++ b/SouP/build.gradle
@@ -24,9 +24,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.4'
 	implementation 'junit:junit:4.13.1'
 	implementation 'org.jsoup:jsoup:1.13.1'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.session:spring-session-jdbc'
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 	implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.1.1'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
