alter from h2 to mysql

--- a/SouP/src/main/resources/application.properties
+++ b/SouP/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.profiles.include=oauth
 spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name= SPRING_SESSION
