--- a/SouP/src/main/resources/application.properties
+++ b/SouP/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.profiles.include=oauth
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
