--- a/SouP/src/main/resources/application.properties
+++ b/SouP/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.profiles.include=oauth
-spring.jpa.properties.hibernate.default_batch_fetch_size=1000
+#spring.jpa.properties.hibernate.default_batch_fetch_size=1000
 spring.data.web.pageable.one-indexed-parameters=true
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
