--- a/SouP/src/main/resources/application.properties
+++ b/SouP/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.data.web.pageable.one-indexed-parameters=true
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.highlight_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
+
