add build project

--- a/SouP/src/main/resources/application.yml
+++ b/SouP/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
 #    database: mysql
 #    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     generate-ddl: true
-#    show-sql: true
+    show-sql: true
     hibernate:
       ddl-auto: create
     open-in-view: false
