--- a/SouP/src/main/resources/application.yml
+++ b/SouP/src/main/resources/application.yml
@@ -1,20 +1,20 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/soup?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-    username: soup
-    password: hongik
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://127.0.0.1:3306/soup?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+#    username: soup
+#    password: hongik
 
 #    url: jdbc:h2:tcp://localhost/~/SouP
 #    driver-class-name: org.h2.Driver
 #    username: sa
   jpa:
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+#    database: mysql
+#    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     generate-ddl: true
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     open-in-view: false
 
   # 콘솔 확인 을 위한 always
