--- a/SouP/build.gradle
+++ b/SouP/build.gradle
@@ -20,6 +20,9 @@ configurations {
 repositories {
 	mavenCentral()
 }
+jar {
+	enabled = false
+}
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.4'
