--- a/SouP/src/main/resources/application-real.properties
+++ b/SouP/src/main/resources/application-real.properties
@@ -1,3 +1,10 @@
-#spring.profiles.include=oauth, real-db
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.session.store-type=jdbc
+spring.session.store-type=jdbc
+spring.data.web.pageable.one-indexed-parameters=true
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
+#spring.jpa.properties.hibernate.default_batch_fetch_size=1000
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.highlight_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
