--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ branches:
   only:
     - master
 
+before_install:
+  - chmod +x gradlew
+
+before_script:
+  - cd SouP/
+
 cache:
   directories:
     - '$HOME/.m2/repository'
