--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,9 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
-  - pwd
   - cd ../
-  - pwd
   - mkdir -p before-deploy
-  - cp scripts/*.sh before-deploy/
-  - cd ../
-  - pwd
+  - cp scripts/deploy.sh before-deploy/
   - cp appspec.yml before-deploy/
   - cp /SouP/build/libs/*jar before-deploy/
   - cd before-deploy && zip -r before-deploy *
