--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,7 @@ script: "./gradlew clean build"
 before_deploy:
   - cd ../
   - mkdir -p before-deploy
-  - cd scripts
-  - cp deploy.sh ../before-deploy/
-  - cd ../
-#  - cp scripts/deploy.sh before-deploy/
+  - cp scripts/deploy.sh before-deploy/
   - cp appspec.yml before-deploy/
   - cp /SouP/build/libs/*jar before-deploy/
   - cd before-deploy && zip -r before-deploy *
