--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ script: "./gradlew clean build"
 before_deploy:
   - cd ../
   - mkdir -p before-deploy
-  - cp scripts/deploy.sh before-deploy/
+  - cp scripts/*.sh before-deploy/
   - cp appspec.yml before-deploy/
-  - cp /SouP/build/libs/*jar before-deploy/
+  - cp SouP/build/libs/*.jar before-deploy/
   - cd before-deploy && zip -r before-deploy *
   - cd ../ && mkdir -p deploy
   - mv before-deploy/before-deploy.zip deploy/SouP.zip
