--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,9 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
+  - pwd
   - cd ../
+  - pwd
   - mkdir -p before-deploy
   - cp scripts/*.sh before-deploy/
   - cp appspec.yml before-deploy/
