add CI/CD arguments(4-7)

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ before_deploy:
   - cd ../ && mkdir -p deploy
   - mv before-deploy/before-deploy.zip deploy/SouP.zip
 
+after_deploy:
+  - cd SouP
 deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
