--- a/SouP/build.gradle
+++ b/SouP/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
 	id 'org.springframework.boot' version '2.6.6'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
@@ -5,7 +6,7 @@ plugins {
 }
 
 group = 'Matching'
-version = '0.0.3-SNAPSHOT-'+new Date().toString()
+version = '0.0.3-SNAPSHOT-'+new Date().format("yyyyMMddHHmmss")
 sourceCompatibility = '11'
 
 configurations {
