change to github Action CI/CD [S3 + CodeDeploy](5)

--- a/SouP/build.gradle
+++ b/SouP/build.gradle
@@ -51,3 +51,12 @@ dependencies {
 	}
 	implementation 'org.hibernate.validator:hibernate-validator:6.0.7.Final'
 }
+dependencyManagement {
+	imports {
+		mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:2.3.3"
+	}
+}
+
+dependencies {
+	implementation group: 'io.awspring.cloud', name: 'spring-cloud-starter-aws-parameter-store-config'
+}
