fix to ec2-user

--- a/SouP/src/main/resources/application-oauth.properties
+++ b/SouP/src/main/resources/application-oauth.properties
@@ -17,8 +17,8 @@ spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
 
 spring.security.oauth2.client.registration.kakao.client-id=${kakao.client-id}
-spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8000/login/oauth2/code/kakao
-#spring.security.oauth2.client.registration.kakao.redirect-uri=http://ec2-3-35-183-77.ap-northeast-2.compute.amazonaws.com/login/oauth2/code/kakao
+#spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8000/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.redirect-uri=http://ec2-3-35-183-77.ap-northeast-2.compute.amazonaws.com/login/oauth2/code/kakao
 spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname, profile_image, account_email
