--- a/SouP/src/main/resources/application.yml
+++ b/SouP/src/main/resources/application.yml
@@ -5,4 +5,4 @@ aws:
     name: cloud-parameter-store
     profileSeparator: _
 my:
-  password: ${/spring-boot-aws/cloud-parameter-store/db.username}
+  password: ${db.username}
