--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,18 +13,38 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          submodules: recursive
 
       - name: Set up JDK 11.0.12
         uses: actions/setup-java@v1
         with:
           java-version: 11.0.12
 
-      - name: Grant execute permission for gradlew
+      - name: Grant gradlew permissions and build Spring server
         working-directory: ./SouP
         run: |
           chmod +x ./gradlew
           ./gradlew clean build
-        shell: bash
+      
+      - name: Set up NodeJS 14
+      steps:
+        - uses: actions/checkout@v3
+        - uses: actions/setup-node@v3
+          with:
+            node-version: 14
+        - run: npm ci
+        - run: npm test
+
+      - name: Install NPM modules for Next.js client
+        working-directory: ./soup-frontend
+        run: |
+          npm i
+
+      - name: Build and export Next.js client
+        working-directory: ./soup-frontend
+        run: |
+          npx next build && npx next export
 
       - name: Get current time
         uses: 1466587594/get-current-time@v2
@@ -46,24 +66,23 @@ jobs:
           cd before-deploy && zip -r before-deploy *
           cd ../ && mkdir -p deploy
           mv before-deploy/before-deploy.zip deploy/SouP.zip
-        shell: bash
 
-      - name: Upload to S3
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: |
-          cd deploy
-          aws s3 cp --region ap-northeast-2 --acl private ./SouP.zip s3://soup-build/
+      # - name: Upload to S3
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #   run: |
+      #     cd deploy
+      #     aws s3 cp --region ap-northeast-2 --acl private ./SouP.zip s3://soup-build/
 
-      - name: Deploy
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: |
-          aws deploy create-deployment \
-          --application-name soup \
-          --deployment-group-name soup-group \
-          --file-exists-behavior OVERWRITE \
-          --s3-location bucket=soup-build,bundleType=zip,key=SouP.zip \
-          --region ap-northeast-2
+      # - name: Deploy
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #   run: |
+      #     aws deploy create-deployment \
+      #     --application-name soup \
+      #     --deployment-group-name soup-group \
+      #     --file-exists-behavior OVERWRITE \
+      #     --s3-location bucket=soup-build,bundleType=zip,key=SouP.zip \
+      #     --region ap-northeast-2
