--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Set up JDK 11.0.12
+      - name: Setup JDK 11.0.12
         uses: actions/setup-java@v1
         with:
           java-version: 11.0.12
@@ -26,15 +26,11 @@ jobs:
         run: |
           chmod +x ./gradlew
           ./gradlew clean build
-      
-      - name: Set up NodeJS 14
-      steps:
-        - uses: actions/checkout@v3
-        - uses: actions/setup-node@v3
-          with:
-            node-version: 14
-        - run: npm ci
-        - run: npm test
+
+      - name: Setup NodeJS 14
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14
 
       - name: Install NPM modules for Next.js client
         working-directory: ./soup-frontend
