--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+          token: ${{ secrets.CLIENT_REPO_ACCESS_TOKEN }}
 
       - name: Setup JDK 11.0.12
         uses: actions/setup-java@v1
