--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,15 +55,16 @@ jobs:
 
       - name: Make client zip file
         run: |
-          mkdir before-deploy
-          cp scripts/*.sh before-deploy/
-          zip -r deploy/soup-client.zip soup-frontend/.next
+          mkdir deploy
+          zip -r deploy/soup-client.zip soup-frontend/.next/*
 
-      # cp appspec.yml before-deploy/
-      # cp SouP/build/libs/*.jar before-deploy/
-      # cd before-deploy && zip -r before-deploy *
-      # cd ../ && mkdir -p deploy
-      # mv before-deploy/before-deploy.zip deploy/soup-server.zip
+      # - name: Make server zip file
+      #   run: |
+      #     mkdir before-deploy
+      #     cp scripts/*.sh before-deploy/
+      #     cp appspec.yml before-deploy/
+      #     cp SouP/build/libs/*.jar before-deploy/
+      #     zip -r deploy/soup-server.zip before-deploy/*
 
       # - name: Upload to S3
       #   env:
