--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,16 +17,16 @@ jobs:
           submodules: recursive
           token: ${{ secrets.CLIENT_REPO_ACCESS_TOKEN }}
 
-      # - name: Setup JDK 11.0.12
-      #   uses: actions/setup-java@v1
-      #   with:
-      #     java-version: 11.0.12
+      - name: Setup JDK 11.0.12
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11.0.12
 
-      # - name: Grant gradlew permissions and build Spring server
-      #   working-directory: ./SouP
-      #   run: |
-      #     chmod +x ./gradlew
-      #     ./gradlew clean build
+      - name: Build Spring server
+        working-directory: ./SouP
+        run: |
+          chmod +x ./gradlew
+          ./gradlew clean build
 
       - name: Setup NodeJS 14
         uses: actions/setup-node@v3
@@ -53,18 +53,18 @@ jobs:
       - name: Show Current Time
         run: echo "CurrentTime=${{steps.current-time.outputs.formattedTime}}"
 
+      - name: Make server zip file
+        run: |
+          mkdir before-deploy
+          cp scripts/*.sh before-deploy/
+          cp appspec.yml before-deploy/
+          cp SouP/build/libs/*.jar before-deploy/
+          zip -r deploy/soup-server.zip before-deploy/*
+
       - name: Make client zip file
         run: |
           mkdir deploy
           zip -r deploy/soup-client.zip soup-frontend/.next/*
-
-      # - name: Make server zip file
-      #   run: |
-      #     mkdir before-deploy
-      #     cp scripts/*.sh before-deploy/
-      #     cp appspec.yml before-deploy/
-      #     cp SouP/build/libs/*.jar before-deploy/
-      #     zip -r deploy/soup-server.zip before-deploy/*
 
       # - name: Upload to S3
       #   env:
