--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,13 +74,13 @@ jobs:
       #     zip -r deploy/soup-server.zip pre-deploy/*
       #     rm -rf pre-deploy
 
-      - name: Make client zip file
-        run: |
-          mkdir pre-deploy
-          cp -r deploy/client/. pre-deploy/
-          cp -r soup-frontend/.next/* pre-deploy/.next/
-          zip -r deploy/soup-client.zip pre-deploy/*
-          rm -rf pre-deploy
+      # - name: Make client zip file
+      #   run: |
+      #     mkdir pre-deploy
+      #     cp -r deploy/client/. pre-deploy/
+      #     cp -r soup-frontend/.next/* pre-deploy/.next/
+      #     zip -r deploy/soup-client.zip pre-deploy/*
+      #     rm -rf pre-deploy
 
       # - name: Upload to S3
       #   env:
