--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,6 +79,7 @@ jobs:
           mkdir pre-deploy
           cp -r deploy/client/. pre-deploy/
           rm -rf soup-frontend/.next/cache
+          mkdir pre-deploy/.next
           cp -r soup-frontend/.next/* pre-deploy/.next/
           zip -r deploy/soup-client.zip pre-deploy/*
           rm -rf pre-deploy
