--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,23 +27,33 @@ jobs:
           submodules: recursive
           token: ${{ secrets.CLIENT_REPO_ACCESS_TOKEN }}
 
-      # - name: Setup JDK 11.0.12
-      #   uses: actions/setup-java@v1
-      #   with:
-      #     java-version: 11.0.12
+      - name: Setup JDK 11.0.12
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11.0.12
 
-      # - name: Build Spring server
-      #   working-directory: ./SouP
-      #   run: |
-      #     chmod +x ./gradlew
-      #     ./gradlew clean build
+      - name: Cache Gradle & Spring
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Build Spring server
+        working-directory: ./SouP
+        run: |
+          chmod +x ./gradlew
+          ./gradlew clean build
 
       - name: Setup NodeJS 16
         uses: actions/setup-node@v3
         with:
           node-version: 16
 
-      - name: Cache Next.js build files
+      - name: Cache NPM & Next.js
         uses: actions/cache@v3
         with:
           # See here for caching with `yarn` https://github.com/actions/cache/blob/main/examples.md#node---yarn or you can leverage caching with actions/setup-node https://github.com/actions/setup-node
@@ -66,13 +76,13 @@ jobs:
         run: |
           npx next build
 
-      # - name: Make server zip file
-      #   run: |
-      #     mkdir pre-deploy
-      #     cp -r deploy/server/. pre-deploy/
-      #     cp SouP/build/libs/*.jar pre-deploy/
-      #     zip -r deploy/soup-server.zip pre-deploy/*
-      #     rm -rf pre-deploy
+      - name: Make server zip file
+        run: |
+          mkdir pre-deploy
+          cp -r deploy/server/. pre-deploy/
+          cp SouP/build/libs/*.jar pre-deploy/
+          zip -r deploy/soup-server.zip pre-deploy/*
+          rm -rf pre-deploy
 
       - name: Make client zip file
         run: |
@@ -84,24 +94,24 @@ jobs:
           zip -r deploy/soup-client.zip pre-deploy/*
           rm -rf pre-deploy
 
-      # - name: Upload to S3
-      #   env:
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #   run: |
-      #     cd deploy
-      #     aws s3 cp --region ap-northeast-2 --acl private ./soup-server.zip s3://soup-build/
-      #     aws s3 cp --region ap-northeast-2 --acl private ./soup-client.zip s3://soup-build/
+      - name: Upload to S3
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          cd deploy
+          aws s3 cp --region ap-northeast-2 --acl private ./soup-server.zip s3://soup-build/
+          aws s3 cp --region ap-northeast-2 --acl private ./soup-client.zip s3://soup-build/
 
-      # - name: Deploy
-      #   env:
-      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #   run: |
-      #     aws deploy create-deployment \
-      #     --application-name soup \
-      #     --deployment-group-name soup-group \
-      #     --file-exists-behavior OVERWRITE \
-      #     --s3-location bucket=soup-build,bundleType=zip,key=soup-server.zip \
-      #     --s3-location bucket=soup-build,bundleType=zip,key=soup-client.zip \
-      #     --region ap-northeast-2
+      - name: Deploy
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          aws deploy create-deployment \
+          --application-name soup \
+          --deployment-group-name soup-group \
+          --file-exists-behavior OVERWRITE \
+          --s3-location bucket=soup-build,bundleType=zip,key=soup-server.zip \
+          --s3-location bucket=soup-build,bundleType=zip,key=soup-client.zip \
+          --region ap-northeast-2
