--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,7 +71,7 @@ jobs:
           mkdir pre-deploy
           cp -r deploy/server/. pre-deploy/
           cp SouP/build/libs/*.jar pre-deploy/
-          zip -r deploy/soup-server.zip pre-deploy/*
+          zip -r deploy/soup-server.zip pre-deploy
           rm -rf pre-deploy
 
       - name: 📂 Make client zip file
@@ -80,7 +80,7 @@ jobs:
           cp -r deploy/client/. pre-deploy/
           rm -rf soup-frontend/.next/cache
           cp -r soup-frontend/.next/. pre-deploy/.next/
-          zip -r deploy/soup-client.zip pre-deploy/*
+          zip -r deploy/soup-client.zip pre-deploy
           rm -rf pre-deploy
 
       - name: 🚚 Upload to S3
