fix deploy.yml for deploy twice

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,6 +101,13 @@ jobs:
           --application-name soup \
           --deployment-group-name soup-group \
           --file-exists-behavior OVERWRITE \
-          --s3-location bucket=soup-build,bundleType=zip,key=soup-server.zip \
           --s3-location bucket=soup-build,bundleType=zip,key=soup-client.zip \
           --region ap-northeast-2
+
+          aws deploy create-deployment \
+          --application-name soup \
+          --deployment-group-name soup-group \
+          --file-exists-behavior OVERWRITE \
+          --s3-location bucket=soup-build,bundleType=zip,key=soup-server.zip \
+          --region ap-northeast-2
+
