--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,7 +78,7 @@ jobs:
         run: |
           mkdir pre-deploy
           cp -r deploy/client/. pre-deploy/
-          cp -r soup-frontend/.next/standalone pre-deploy/
+          cp -r soup-frontend/.next/standalone/. pre-deploy
           cp -r soup-frontend/public pre-deploy/public
           cp -r soup-frontend/.next/static pre-deploy/.next/static
           zip -r deploy/soup-client.zip pre-deploy
