--- a/SouP/src/main/resources/application-oauth.properties
+++ b/SouP/src/main/resources/application-oauth.properties
@@ -1,6 +1,7 @@
 spring.security.oauth2.client.registration.google.client-id=${google.client-id}
 spring.security.oauth2.client.registration.google.client-secret=${google.client-secret}
 spring.security.oauth2.client.registration.google.scope=profile,email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
 
 # registration
 spring.security.oauth2.client.registration.naver.client-id=${naver.client-id}
@@ -18,7 +19,7 @@ spring.security.oauth2.client.provider.naver.user-name-attribute=response
 
 spring.security.oauth2.client.registration.kakao.client-id=${kakao.client-id}
 #spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8000/login/oauth2/code/kakao
-spring.security.oauth2.client.registration.kakao.redirect-uri=http://ec2-3-35-183-77.ap-northeast-2.compute.amazonaws.com/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname, profile_image, account_email
@@ -30,3 +31,4 @@ spring.security.oauth2.client.provider.kakao.user_name_attribute=id
 
 spring.security.oauth2.client.registration.facebook.client-id=${facebook.client-id}
 spring.security.oauth2.client.registration.facebook.client-secret=${facebook.client-secret}
+spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
