add covering index in RDB

--- a/SouP/src/main/resources/application-real-db.properties
+++ b/SouP/src/main/resources/application-real-db.properties
@@ -5,7 +5,7 @@ spring.datasource.password=${db.password}
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=false
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.jpa.generate-ddl=true
