--- a/SouP/src/main/resources/application.properties
+++ b/SouP/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.profiles.include=oauth, real-db, real
+spring.profiles.include=oauth, real
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=${db.url}
+#spring.datasource.username=${db.username}
+#spring.datasource.password=${db.password}
+spring.datasource.url=jdbc:mysql://localhost:3306/soup?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.jpa.generate-ddl=true
